--- a/gleam.toml
+++ b/gleam.toml
@@ -19,6 +19,7 @@ envoy = ">= 1.0.2 and < 2.0.0"
 glint = ">= 1.2.1 and < 2.0.0"
 argv = ">= 1.0.2 and < 2.0.0"
 gleam_json = ">= 3.0.1 and < 4.0.0"
+snag = ">= 1.1.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
