--- a/gleam.toml
+++ b/gleam.toml
@@ -24,3 +24,4 @@ snag = ">= 1.1.0 and < 2.0.0"
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
 gleescript = ">= 1.5.1 and < 2.0.0"
+birdie = ">= 1.3.1 and < 2.0.0"
